feat : auth routes and change logs
