# src/fcmToken/dtos/storeFcmToken.dto.js
@@ -1,0 +1,8 @@
+import Joi from "joi";
+import { PLATFORM } from "../../common/constants/constant";
+
+export default Joi.object().keys({
+  token: Joi.string().required(),
+  deviceId: Joi.string().required(),
+  platform: Joi.string().required().valid(PLATFORM.ANDROID, PLATFORM.IOS),
+});
